# data-partitioner

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
docs/: architecture.md  testing.md
scripts/: generate_ci_report.py
src/data_partitioner/: __init__.py  cli.py  core.py  streaming.py
tests/: helpers.py  test_cli.py  test_discover_input_files.py  test_file_format.py  test_rebalance.py  test_rebalance_extended.py  test_rebalance_result.py  test_streaming.py  test_validation.py
tests/performance/: conftest.py  metrics.py  test_rebalance_performance.py  test_streaming_comparison.py
