[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-partitioner"
version = "0.1.0"
description = "Rebalance uneven data files (CSV, Parquet, ORC) into uniformly sized partitions."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Ahmed Naggar"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=1.5",
    "pyarrow>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
data-partitioner = "data_partitioner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "performance: resource and timing benchmarks (may be slow; see docs/testing.md)",
]

[tool.coverage.run]
branch = true
source = ["data_partitioner"]

[tool.coverage.report]
fail_under = 90
show_missing = true
